--- a/My Crazy Night/src/main/AndroidManifest.xml
+++ b/My Crazy Night/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
+        <activity android:name="com.facebook.LoginActivity" >
+            </activity>
     </application>
 
 </manifest>
