--- a/My Crazy Night/src/main/AndroidManifest.xml
+++ b/My Crazy Night/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.epicdynasty.mycrazynight" >
 
+    <uses-sdk android:minSdkVersion="13"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -10,6 +12,7 @@
         <activity
             android:name="com.epicdynasty.mycrazynight.MainActivity"
             android:label="@string/app_name" >
+           //  android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen"
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,6 +22,16 @@
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
         <activity android:name="com.facebook.LoginActivity">
             </activity>
+        <activity
+            android:name="com.epicdynasty.mycrazynight.SecondActivity"
+            android:label="@string/title_activity_second"
+            android:parentActivityName="com.epicdynasty.mycrazynight.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.epicdynasty.mycrazynight.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
+
+
